<resources>
    <string name="app_name">CJMSApp</string>
    <string name="exit_when_back_press">再按一次退出程序</string>
    <string name="logout_account">退出账号</string>
    <string name="main_home">铸件信息管理系统</string>
    <string name="sure_logout">确定退出登录</string>
    <string name="mark_scraps">料废录入</string>
    <string name="scraps_record">料废信息列表</string>
    <string name="curb">遏制</string>
    <string name="refresh_cache_data">数据缓存更新</string>
    <string name="check_app">应用更新</string>
    <string name="data_cache">数据缓存</string>
    <string name="scraps_info_input">料废信息录入</string>
    <string name="scraps_info_input_other">料废信息录入-其他信息</string>
    <string name="scraps_info_input_defect">料废信息录入-缺陷信息</string>
    <string name="next_step">下一步</string>
    <string name="next_step_input_defect">下一步-录入缺陷信息</string>
    <string name="next_step_input_other">下一步-录入其他信息</string>
    <string name="title_scraps_mark">料废录入</string>
    <string name="base_code">基地</string>
    <string name="tip_select_base_code">请选择基地</string>
    <string name="work_shop">车间</string>
    <string name="tip_select_work_shop">请选择车间</string>
    <string name="prod_line">产线</string>
    <string name="tip_select_prod_line">请选择产线</string>
    <string name="part_no">毛坯零件号</string>
    <string name="tip_select_part_no">\u3000请选择零件号</string>
    <string name="tip_scan_code">长按两侧按键，对准二维码/条形码/针打码进行扫描</string>
    <string name="rough_cost_code">铸造毛坯码</string>
    <string name="tip_input_rough_coat_code">\u3000请输入铸造毛坯码</string>
    <string name="ready_machine_code">预加工码</string>
    <string name="tip_input_ready_machine_code">请输入预加工码</string>
    <string name="tip_input_unicode">铸造毛坯码、预加工码至少输入一个</string>
    <string name="remark_waste_statistics">计入料废</string>
    <string name="back">返回</string>
    <string name="tip_please_select_base_code">请选择基地代号</string>
    <string name="tip_please_select_work_shop">请选择车间区域</string>
    <string name="tip_please_select_prod_line">请选择产线</string>
    <string name="tip_please_select_part_no">请选择毛坯零件号</string>
    <string name="tip_search_scraps">预加工码/铸件毛坯码/零件号模糊搜索</string>
    <string name="tip_search_curb">遏制单号/零件号/供应商名称搜索</string>
    <string name="curb_task_list">遏制任务列表</string>
    <string name="upload">上传</string>
    <string name="tip_last_upate_time">上次更新时间</string>
    <string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="defect_face_location">缺陷位置(面)</string>
    <string name="defect_face_location_list">历史零件面定义图</string>
    <string name="defect_drop_location">缺陷位置(点)</string>
    <string name="tip_input_defect_drop_location">\u3000请输入缺陷位置(点)</string>
    <string name="defect_name">缺陷名称</string>
    <string name="tip_select_defect_name">请选择缺陷名称</string>
    <string name="defect_desc">缺陷描述</string>
    <string name="tip_defect_desc">请输入缺陷描述</string>
    <string name="frequency">班次</string>
    <string name="tip_select_frequency">请选择班次</string>
    <string name="source">来源</string>
    <string name="tip_select_source">请选择来源</string>
    <string name="waste_statistics_date">统计料废时间</string>
    <string name="tip_input_waste_statistics_date">请输入统计料废时间如：1999-01-01 00:00</string>
    <string name="waste_statistics_name">统计料废人员</string>
    <string name="tip_input_waste_statistics_name">请输入统计料废人员</string>
    <string name="remark">备注</string>
    <string name="tip_remark_desc">请输入备注</string>
    <string name="save_and_upload">保存并上传</string>
</resources>