<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".ui.scrap.ScrapsInfoDefectActivity">

    <include
        android:id="@+id/commonTitle"
        layout="@layout/common_title_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/nestedScrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commonTitle"
        android:layout_height="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDefectFaceLocation"
                android:gravity="center_vertical"
                android:textSize="@dimen/normal_size"
                android:textStyle="bold"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/defect_face_location"
                android:drawableRight="@mipmap/red_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDefectFaceLocationHistory"
                android:gravity="center_vertical"
                android:textSize="@dimen/normal_size"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/dp_16"
                android:textColor="@color/blue_162BA2"
                android:text="@string/defect_face_location_list"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvDefectFaceLocation"
                app:layout_constraintTop_toTopOf="@+id/tvDefectFaceLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDefectFace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDefectFaceLocation"
                android:layout_margin="@dimen/dp_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDefectDropLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:drawableRight="@mipmap/red_star"
                android:layout_marginLeft="@dimen/dp_16"
                android:drawablePadding="2dp"
                android:text="@string/defect_drop_location"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvDefectFace" />

            <EditText
                android:id="@+id/etDefectDropLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:gravity="center_horizontal"
                android:hint="@string/tip_input_defect_drop_location"
                android:textColor="@color/black"
                android:textColorHint="@color/color_text_hint"
                android:textSize="@dimen/normal_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDefectDropLocationTitle" />


            <TextView
                android:id="@+id/tvDefectNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:drawableRight="@mipmap/red_star"
                android:drawablePadding="2dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:text="@string/defect_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDefectDropLocationTitle" />

            <EditText
                android:id="@+id/etDefectName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:gravity="center_horizontal"
                android:hint="@string/tip_select_defect_name"
                android:textColor="@color/black"
                android:textColorHint="@color/color_text_hint"
                android:textSize="@dimen/normal_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDefectNameTitle" />

            <TextView
                android:id="@+id/tvDefectDescTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:drawableRight="@mipmap/red_star"
                android:drawablePadding="2dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:text="@string/defect_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDefectNameTitle" />

            <EditText
                android:id="@+id/etDefectDesc"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@drawable/trans_black_board_bg"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:gravity="left|top"
                android:padding="@dimen/dp_10"
                android:layout_margin="@dimen/dp_16"
                android:hint="@string/tip_defect_desc"
                android:textColor="@color/black"
                android:textColorHint="@color/color_text_hint"
                android:textSize="@dimen/normal_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnNext"
                app:layout_constraintTop_toBottomOf="@+id/tvDefectDescTitle" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_blue"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/next_step_input_other"
                android:layout_height="@dimen/button_height"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>